<resources>
    <string name="app_name">Tickeep</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logo">logo</string>
    <string name="create_account">Create account</string>
    <string name="todo">TODO</string>
    <string name="login_here">Login here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="button">Button</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="create_an_account_in_tickeep_to_get_all_features">Create an account in TicKeep to get all features.</string>
    <string name="create_account2">CREATE ACCOUNT</string>
    <string name="sign_in2">Sign in</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="create_account_from_here">Create account from here</string>
    <string name="title_activity_homeactivity">homeactivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--STRINGS OF PROFILE ACTIVITY-->
    <string name="edit_profile">Edit Profile</string>
    <string name="change_any_value_to_edit_profile">Change any value to edit profile</string>
    <string name="change_name">Change name</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="change_phone">Chane phone</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>



    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="notEqualPassReg">Passwords not equals</string>
    <string name="emptyStringsError">Empty fields</string>
    <string name="failLogin">Incorrect password</string>
    <string name="title_activity_mainpage">mainpage</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="favourites">Favourites</string>
    <string name="expireds">Expireds</string>
    <string name="log_out">Log out</string>
    <string name="importants">Importants</string>
    <string name="my_ticket_wallet">My ticket wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="view_qr">View QR</string>
    <string name="total_eur">Total EUR:</string>
    <string name="credit_card_eur">Credit card EUR:</string>
    <string name="change">Change:</string>
    <string name="attached_empty">ATTACHED: EMPTY</string>
    <string name="total_paid">Total paid:</string>
    <string name="pref_file">upf.edu.prefFile</string>
    <string name="facebook_app_id">552396355878600</string>
    <string name="fb_login_protocol_scheme">fb552396355878600</string>
    <string name="error_facebook">"Error trying to login with facebook"</string>

</resources>