<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backactivity"
    tools:context=".activity.register">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_createAccount2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"
            android:text="@string/sign_in2"
            android:textAlignment="center"
            android:textColor="#5AA0DC"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_emailLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_singinLogin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:backgroundTint="#439CE8"
            android:text="@string/sign_in"
            android:textSize="24sp"
            app:cornerRadius="50dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/or_connect_using"
            android:textAlignment="center"
            android:textColor="#8492A6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_google"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#E93F33"
                android:text="@string/google"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_twitter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#1DA1F3"
                android:text="@string/twitter"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:backgroundTint="#3B579D"
                android:text="@string/facebook"
                app:cornerRadius="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/don_t_you_have_an_account"
                android:textColor="#8492A6"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_registerFromLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:gravity="start"
                android:text="@string/create_account_from_here"
                android:textColor="#439CE8"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:alpha="0.18"
        android:contentDescription="@string/todo"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>