<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backactivity"
    tools:context=".activity.login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:alpha="0.18"
        android:contentDescription="@string/todo"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:id="@+id/txt_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/create_account"
        android:textColor="#5AA0DC"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_accountmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:text="@string/create_an_account_in_tickeep_to_get_all_features"
        android:textColor="#8492A6"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/txt_createAccount"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_accountmsg">

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_account"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_phone"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_registerAccept"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:backgroundTint="#439CE8"
            android:text="@string/create_account2"
            android:textSize="24sp"
            app:cornerRadius="50dp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="0"
                android:text="@string/already_have_an_account"
                android:textColor="#8492A6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_loginReg"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:gravity="start"
                android:text="@string/login_here"
                android:textColor="#439CE8"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>