<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backactivity"
    tools:context=".activity.profile">

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="456dp"
        android:alpha="0.18"
        android:contentDescription="@string/todo"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:id="@+id/txt_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/edit_profile"
        android:textColor="#5AA0DC"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_changeValueToEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/change_any_value_to_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_edit_profile"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_changeValueToEdit">

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_account"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_phone"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_text_states"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btn_save_changes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:backgroundTint="#1DA1F3"
            android:text="@string/save_changes"
            app:cornerRadius="50dp" />
        <Space
            android:layout_width="40dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btn_cancel_changes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#E93F33"
            android:text="@string/cancel"
            app:cornerRadius="50dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>